# src/controllers/transaction-category.controller.ts
@@ -6,11 +6,27 @@ import { AuthenticatedRequest } from '../types/express';
 export interface CreateCategoryRequest {
   name: string;
   parentId?: number | null;
+  color?: string;
+  icon?: string;
 }
 
 @Route('transaction-categories')
 @Tags('TransactionCategory')
 export class TransactionCategoryController extends Controller {
+  @Get('')
+  public async getTransactionGategories(@Request() request: AuthenticatedRequest) {
+    const userId = request.user.id;
+
+    const transactionCategories = await new TransactionCategoryService().findAll(userId);
+
+    if (!transactionCategories) {
+      this.setStatus(404);
+      return;
+    }
+
+    return transactionCategories;
+  }
+
   @Get('{id}')
   public async getTransactionGategory(
     @Path() id: number,
@@ -33,14 +49,16 @@ export class TransactionCategoryController extends Controller {
     @Body() body: CreateCategoryRequest,
     @Request() request: AuthenticatedRequest,
   ) {
-    const { name, parentId } = body;
+    const { name, parentId, color, icon } = body;
 
     const userId = request.user.id;
 
     return new TransactionCategoryService().create({
       name,
-      parentId,
       userId,
+      color,
+      icon,
+      parent: parentId ? { connect: { id: parentId } } : undefined,
     });
   }
 }
