# src/controllers/transaction.controller.ts
@@ -1,17 +1,36 @@
 import { Body, Controller, Get, Path, Post, Request, Route, Tags } from '@tsoa/runtime';
 
+import { TransactionType } from '../../generated/prisma/enums';
 import { TransactionService } from '../services/transaction.service';
 import { AuthenticatedRequest } from '../types/express';
 
 export interface CreateTransactionRequest {
   name: string;
   amount: number;
+  date: Date;
   transactionCategoryId?: number;
+  necessary?: boolean;
+  note?: string;
+  type?: TransactionType;
 }
 
 @Route('transactions')
 @Tags('Transactions')
 export class TransactionController extends Controller {
+  @Get()
+  public async getTransactions(@Request() request: AuthenticatedRequest) {
+    const userId = request.user.id;
+
+    const transactions = await new TransactionService().findAll(userId);
+
+    if (!transactions) {
+      this.setStatus(404);
+      return;
+    }
+
+    return transactions;
+  }
+
   @Get('{id}')
   public async getTransaction(@Path() id: number, @Request() request: AuthenticatedRequest) {
     const userId = request.user.id;
@@ -31,11 +50,15 @@ export class TransactionController extends Controller {
     @Body() body: CreateTransactionRequest,
     @Request() request: AuthenticatedRequest,
   ) {
-    const { name, amount, transactionCategoryId } = body;
+    const { name, amount, transactionCategoryId, necessary, date, type, note } = body;
 
     const userId = request.user.id;
 
     return new TransactionService().create({
+      date,
+      type,
+      note,
+      necessary,
       name,
       amount,
       userId,
