# src/generated/routes.ts
@@ -14,12 +14,21 @@ import type { Request as ExRequest, Response as ExResponse, RequestHandler, Rout
 // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 
 const models: TsoaRoute.Models = {
+    "TransactionType": {
+        "dataType": "refAlias",
+        "type": {"dataType":"union","subSchemas":[{"dataType":"enum","enums":["INCOME"]},{"dataType":"enum","enums":["EXPENSE"]},{"dataType":"enum","enums":["TRANSFER"]}],"validators":{}},
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     "CreateTransactionRequest": {
         "dataType": "refObject",
         "properties": {
             "name": {"dataType":"string","required":true},
             "amount": {"dataType":"double","required":true},
+            "date": {"dataType":"datetime","required":true},
             "transactionCategoryId": {"dataType":"double"},
+            "necessary": {"dataType":"boolean"},
+            "note": {"dataType":"string"},
+            "type": {"ref":"TransactionType"},
         },
         "additionalProperties": false,
     },
@@ -29,6 +38,8 @@ const models: TsoaRoute.Models = {
         "properties": {
             "name": {"dataType":"string","required":true},
             "parentId": {"dataType":"union","subSchemas":[{"dataType":"double"},{"dataType":"enum","enums":[null]}]},
+            "color": {"dataType":"string"},
+            "icon": {"dataType":"string"},
         },
         "additionalProperties": false,
     },
@@ -50,8 +61,39 @@ export function RegisterRoutes(app: Router) {
 
 
     
+        const argsTransactionController_getTransactions: Record<string, TsoaRoute.ParameterSchema> = {
+                request: {"in":"request","name":"request","required":true,"dataType":"object"},
+        };
+        app.get('/api/transactions',
+            ...(fetchMiddlewares<RequestHandler>(TransactionController)),
+            ...(fetchMiddlewares<RequestHandler>(TransactionController.prototype.getTransactions)),
+
+            async function TransactionController_getTransactions(request: ExRequest, response: ExResponse, next: any) {
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args: argsTransactionController_getTransactions, request, response });
+
+                const controller = new TransactionController();
+
+              await templateService.apiHandler({
+                methodName: 'getTransactions',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: undefined,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
         const argsTransactionController_getTransaction: Record<string, TsoaRoute.ParameterSchema> = {
                 id: {"in":"path","name":"id","required":true,"dataType":"double"},
+                request: {"in":"request","name":"request","required":true,"dataType":"object"},
         };
         app.get('/api/transactions/:id',
             ...(fetchMiddlewares<RequestHandler>(TransactionController)),
@@ -100,6 +142,36 @@ export function RegisterRoutes(app: Router) {
 
               await templateService.apiHandler({
                 methodName: 'createTransaction',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: undefined,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        const argsTransactionCategoryController_getTransactionGategories: Record<string, TsoaRoute.ParameterSchema> = {
+                request: {"in":"request","name":"request","required":true,"dataType":"object"},
+        };
+        app.get('/api/transaction-categories',
+            ...(fetchMiddlewares<RequestHandler>(TransactionCategoryController)),
+            ...(fetchMiddlewares<RequestHandler>(TransactionCategoryController.prototype.getTransactionGategories)),
+
+            async function TransactionCategoryController_getTransactionGategories(request: ExRequest, response: ExResponse, next: any) {
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args: argsTransactionCategoryController_getTransactionGategories, request, response });
+
+                const controller = new TransactionCategoryController();
+
+              await templateService.apiHandler({
+                methodName: 'getTransactionGategories',
                 controller,
                 response,
                 next,
